--- a/README
+++ b/README
@@ -10,8 +10,17 @@ My own chess game, to then be used to make a chess engine.
 
 THE GAME
 
-Initially will play through the command line, then eventually
-visualize with pygame
+diagram of array indexes for board state
+
+8 56  ...       63
+7 48  ...       55
+6 40  ...       47
+5 32  ...       39
+4 24 ...        31
+3 16 ...        23
+2 8 ...         15
+1 0 1 2 3 4 5 6 7
+  a b c d e f g h
 
 ****************************************************************
 
